@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  - {static} CAPACIDAD : int
  - {static} VALOR_A : int
  - {static} VALOR_MODIFICADO : int
  + {static} main(args : String[]) : void
  - {static} ejecutarPrueba() : void
  - {static} mostrarEstado(array : Array, mensaje : String) : void
}

class Array {
  - lista : Lista
  - capacidad : int
  + Array(capacidad : int)
  + set(indice : int, valor : int) : void
  + get(indice : int) : int
  + longitud() : int
  - validarIndice(indice : int) : void
}

class Lista {
  - cabeza : Nodo
  - tamaño : int
  + agregar(valor : int) : void
  + obtener(indice : int) : int
  + modificar(indice : int, valor : int) : void
  - buscarNodo(indice : int) : Nodo
}

class "Lista.Nodo" as Nodo << (I,orchid) Inner Class >> {
  - dato : int
  - siguiente : Nodo
  + Nodo(dato : int)
}

Cliente ..> Array : usa
Array *-- Lista : compone
Lista +-- Nodo : contiene (interna)

@enduml
